--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -27,8 +27,7 @@
 <body>
 	<header class="head">
         <div class="head_logo_div">
-            <img class="logo_img" src="images/upload/head.jpg"></a>
-        </div>
+            <img class="logo_img" src="images/upload/head.jpg">
         <div class="head_nav_div">
              <nav class="head_nav">
                 <ul id="nav_ul">
@@ -41,7 +40,7 @@
             </nav>
         </div>
         <div class="clear"></div>
-    </header>
+     </header>
     
     <ul class="float_btn" id="float_btn">
         <li class="btn_on"></li>
@@ -68,7 +67,7 @@
                             <span class="blog_icon"></span>
                             <span class="blog_text"><p class="item_name"> 博客</p></span>
                         </a>
-                        </a>
+                       
 
                         <div class="green_cycle">
                             <img class="green_cycle_img" src="images/icon/green_cycle.svg">
