--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                         </div>
                         <div class="hobby_text_div">
                             <div class="hobby_img_info_mob">
-                                <h1>动漫/<a>海贼王&火影忍者&lol</a></h1>
+                                <h1>动漫/<a>海贼王&火影忍者</a></h1>
                             </div>
                             <p class="about_p">
 							    小学就开始追火影忍者,看了4,5百集,崇拜忍术，崇尚木叶。初二入手海贼王，看完第一集
