--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     
                     </li>
                     <li class="twitter_items">
-                        <a href="https://twitter.com/swordsmanye1?lang=en" target="_blank">Twitter</a>
+                        <a href="#" target="_blank">Twitter</a>
                     
                     </li>
                     <li class="facebook_items">
