--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div id="box01_text">
                 <p class="box01_p">不久前还只是一只电焊工.</p>
                 <p class="box01_p">现在还只是一只喜欢动漫和编程的学生党.</p>
-                <p class="box01_p">不久以后将是一只追寻梦想的单身汪.</p>
+                <p class="box01_p">不久以后将是追寻梦想的无畏者.</p>
                 </div>
             </div>
             <div class="arrow_div">
@@ -267,7 +267,7 @@
                                 和大多数人一样喜欢看好莱坞大片,也是史泰龙的铁粉,不是说国产片不好， 不过有对比就有伤害，不得不承认好莱坞大片确实好看，每一部都是经典。							
                             </p>
                             <p>
-                                此外也会看国产片，不过校园爱情类的居多吧，不怎么看好校园爱情。
+                                此外也会看国产片，不过校园爱情类的居多吧。
                             </p>
                         </div>
                     </li>
