--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                                 <h1>音乐/<a>许嵩&周杰伦 </a></h1>
                             </div>
                             <p class="about_p">
-							    对于音乐的喜爱可能来源于心灵对于艺术的向往,高中时代迷恋许嵩不能自拔,手机
-								里全是他的歌,《浅浅唱》《庐州月》,那时的最爱。
+				对于音乐的喜爱可能来源于心灵对于艺术的向往,高中时代迷恋许嵩不能自拔,虽总遭到了同学的嘲笑，但是手机里依然
+				全是他的歌,《浅浅唱》《庐州月》,那时的最爱。
                                 
 								
                             </p>
