--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     
                     </li>
                     <li class="weibo_items">
-                        <a href="http://weibo.com/u/5704077815" target="_blank">微博</a>
+                        <a href="https://weibo.com/5704077815/profile?rightmod=1&wvr=6&mod=personnumber&is_all=1#_rnd1518953594493" target="_blank">微博</a>
                     
                     </li>
                     <li class="zhihu_items">
